# cpp-boiler

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  ProjectParameters.cmake  README.md
debian/: rules
docs/: CMakeLists.txt  Doxyfile.in  DoxygenStyle.css  footer.html  footer.in  header.html
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/d1/de9/: locale_8cpp.html  locale_8cpp.js
docs/html/d2/d36/: nls_8h.html  nls_8h.js  nls_8h_a47001a6a70cbe0ca4ac1b6743e729ff1_icgraph.map  nls_8h_a47001a6a70cbe0ca4ac1b6743e729ff1_icgraph.md5  nls_8h_source.html
docs/html/d3/d2c/: class_money_outputter.html  class_money_outputter.js  class_money_outputter_af3ec5c5573c03a525825ccb50efb87ef_cgraph.map  class_money_outputter_af3ec5c5573c03a525825ccb50efb87ef_cgraph.md5  class_money_outputter_af3ec5c5573c03a525825ccb50efb87ef_icgraph.map  class_money_outputter_af3ec5c5573c03a525825ccb50efb87ef_icgraph.md5
docs/html/d4/d56/: nls_8h__dep__incl.map  nls_8h__dep__incl.md5
docs/html/d4/d83/: nls_8cpp.html  nls_8cpp.js  nls_8cpp_a9a400fd69756f7f043563f83a678eb12_cgraph.map  nls_8cpp_a9a400fd69756f7f043563f83a678eb12_cgraph.md5
docs/html/d5/dbe/: class_money_outputter-members.html
docs/html/d9/db5/: md__home_talos-mint_o_s__projects_cpp-boiler__r_e_a_d_m_e.html
docs/html/d9/dd6/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html
docs/html/da/d2a/: locale_8cpp__incl.map  locale_8cpp__incl.md5
docs/html/da/d85/: nls_8cpp__incl.map  nls_8cpp__incl.md5
docs/html/da/dce/: main_8cpp__incl.map  main_8cpp__incl.md5
docs/html/dd/dde/: nls_8h__incl.map  nls_8h__incl.md5
docs/html/df/d0a/: main_8cpp.html  main_8cpp.js  main_8cpp_a97b0fa62b7b0972875f5f589322c4c24_cgraph.map  main_8cpp_a97b0fa62b7b0972875f5f589322c4c24_cgraph.md5  main_8cpp_source.html
docs/html/df/dc4/: _h_o_m_e_8md.html  _h_o_m_e_8md_source.html
docs/html/df/dff/: md__h_o_m_e.html
docs/html/search/: all_5.js  all_7.js  classes_0.js  defines_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt  config.h.in  locale.cpp  main.cpp  nls.cpp  nls.h
support/: .project_vars.sh.in  README_in.md  build-gitignore.sh  copyright-header.sh  project_vars.sh
support/.gitignore/: local
support/cmake/: Depedencies.cmake
support/gitignore/: local
translations/: CMakeLists.txt  Readme.md  cpp-boiler.pot  el.po  update-translations.sh
